force-app/main/default/objects/SRM_API_Metadata_Client_Setting__mdt/SRM_API_Metadata_Client_Setting__mdt.object-meta.xml
<CustomObject>
    <label>SRM API Metadata Client Setting</label>
    <pluralLabel>SRM API Metadata Clients Settings</pluralLabel>
</CustomObject>