force-app/main/default/objects/SRM_API_Metadata_Client_Setting__mdt/fields/Additional_Metadata_Types__c.field-meta.xml
<CustomField>
    <fullName>Additional_Metadata_Types__c</fullName>
    <label>Additional Metadata Types</label>
    <length>250</length>
    <type>Text</type>
</CustomField>