force-app/main/default/objects/SRM_API_Metadata_Client_Setting__mdt/fields/Api_Version__c.field-meta.xml
<CustomField>
    <fullName>Api_Version__c</fullName>
    <label>Api Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>