force-app/main/default/objects/SRM_API_Metadata_Client_Setting__mdt/fields/Describe_Metadata_Exception__c.field-meta.xml
<CustomField>
    <fullName>Describe_Metadata_Exception__c</fullName>
    <label>Describe Metadata Exception</label>
    <type>TextArea</type>
</CustomField>