force-app/main/default/objects/SRM_API_Metadata_Client_Setting__mdt/fields/List_Metadata_Exception__c.field-meta.xml
<CustomField>
    <fullName>List_Metadata_Exception__c</fullName>
    <label>List Metadata Exception</label>
    <type>TextArea</type>
</CustomField>